--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Jereligi <jereligi@student.42.fr>
 # install package VIM | FTPS
 RUN apk update && apk add vim && apk add bash && apk add vsftpd
 
-ADD ./srcs/vsftpd.conf ./etc/vsftpd/vsftpd.conf
-ADD ./srcs/script_init_ftp.sh	./utils/script_init_ftp.sh
+ADD ./vsftpd.conf ./etc/vsftpd/vsftpd.conf
+ADD ./script_init_ftp.sh	./utils/script_init_ftp.sh
 
 CMD ./utils/script_init_ftp.sh
