🐳 feat: Update Dockerfile Nginx | OPENSSL config

--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -12,9 +12,8 @@ RUN chmod +x setup_nginx.sh
 RUN mkdir www
 ADD index.html /www/index.html
 
-# KEY OPENSSL
-ADD nginx-selfsigned.crt /etc/ssl/certs/nginx-selfsigned.crt
-ADD nginx-selfsigned.key /etc/ssl/private/nginx-selfsigned.key
+# CONFIG OPENSSL
+RUN openssl req -x509 -nodes -subj '/C=FR/ST=PARIS/L=PARIS/O=jereligi/CN=localhost' -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt
 
 EXPOSE 80 443 301
 
