--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -1,10 +1,18 @@
-FROM alpine
+FROM alpine:latest
 MAINTAINER Jereligi <jereligi@student.42.fr>
 
-# install package VIM | FTPS
-RUN apk update && apk add vim && apk add bash && apk add vsftpd
+# Install FTPS and dependencis
+RUN apk update \
+&& apk add vsftpd && apk add openssl
 
-ADD ./vsftpd.conf ./etc/vsftpd/vsftpd.conf
-ADD ./script_init_ftp.sh	./utils/script_init_ftp.sh
+ADD ./vsftpd.conf		./etc/vsftpd/vsftpd.conf
+ADD ./setup_ftps.sh		./utils/setup_ftps.sh
 
-CMD ./utils/script_init_ftp.sh
+# CONFIG OPENSSL
+RUN openssl req -x509 -nodes -subj '/C=FR/ST=PARIS/L=PARIS/O=jereligi/CN=localhost' \
+		-days 365 -newkey rsa:2048 -keyout /etc/ssl/private/vsftpd.key \
+		 -out /etc/ssl/certs/vsftpd.crt
+
+EXPOSE 20 21 21000-21010
+
+CMD ./utils/setup_ftps.sh
