--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -1,34 +1,32 @@
-# Je ne veux pas de connexion anonyme.
+# Config VSFTPD
 anonymous_enable=NO
-# On autorise les connexions des utilisateurs locaux.
 local_enable=YES
-# Décommentez ceci pour activer toute forme de commande d'écriture FTP.
 write_enable=YES
-# Default umask for local users is 077. You may wish to change this to 022,
-# if your users expect that (022 is used by most other ftpd's)
 local_umask=022
-# Activate directory messages - messages given to remote users when they
-# go into a certain directory.
 dirmessage_enable=YES
-# Activate logging of uploads/downloads.
 xferlog_enable=YES
-#
-# Make sure PORT transfer connections originate from port 20 (ftp-data).
 connect_from_port_20=YES
-# You may override where the log file goes if you like. The default is shown
-# below.
-#xferlog_file=/dev/stdout
 vsftpd_log_file=/proc/1/fd/1
-# You may fully customise the login banner string:
 ftpd_banner=Welcome Alpine ftp server https://hub.docker.com/r/delfer/alpine-ftp-server/
-# with the listen_ipv6 directive.
 listen=YES
-## Enable passive mode
 pasv_enable=YES
 pasv_addr_resolve=YES
-## Disable seccomp filter sanboxing
 seccomp_sandbox=NO
-# Run in background
 background=NO
-# Nombre maximum de connexion simultanées
 max_clients=50
+max_per_ip=4
+chroot_local_user=YES
+allow_writeable_chroot=YES
+
+# Config FTPS/SSL
+ssl_enable=YES
+allow_anon_ssl=NO
+force_local_data_ssl=YES
+force_local_logins_ssl=YES
+ssl_tlsv1=YES
+ssl_sslv2=NO
+ssl_sslv3=NO
+require_ssl_reuse=YES
+ssl_ciphers=HIGH
+rsa_cert_file=/etc/ssl/certs/vsftpd.crt
+rsa_private_key_file=/etc/ssl/private/vsftpd.key
