:arrow_up: feat: Add CMD instruction ALL dockerfile

--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -14,4 +14,4 @@ RUN mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
 
 EXPOSE 3000
 
-# CMD ["sh", "/srcs/setup.sh"]
+CMD ["sh", "/srcs/setup.sh"]
