--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Jereligi <jereligi@student.42.fr>
 
 # Install Nginx and dependencies
 RUN apk update && apk add openrc \
-&& apk add nginx && apk add openssl
+&& apk add nginx openssl openssh
 
 ADD nginx.conf /etc/nginx/nginx.conf
 ADD setup_nginx.sh setup_nginx.sh
@@ -15,7 +15,9 @@ ADD index.html /www/index.html
 RUN openssl req -x509 -nodes -subj '/C=FR/ST=PARIS/L=PARIS/O=jereligi/CN=localhost' \
 		 -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key \
 		 -out /etc/ssl/certs/nginx-selfsigned.crt
+# CONGIF SSH
+ADD sshd_config /etc/ssh/
 
-EXPOSE 80 443 301
+EXPOSE 22 80 443
 
 CMD ["sh", "./setup_nginx.sh"]
