--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -12,6 +12,8 @@ RUN wget https://dl.grafana.com/oss/release/grafana-7.1.5.linux-amd64.tar.gz \
 # Required by grafana-server dependency to run grafana binary
 RUN mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
 
+ADD setup.sh /srcs/setup.sh
+
 EXPOSE 3000
 
 CMD ["sh", "/srcs/setup.sh"]
