--- a/srcs/mysql/mysql-deployment.yaml
+++ b/srcs/mysql/mysql-deployment.yaml
@@ -32,7 +32,7 @@ kind: Service
 metadata:
   name: mysql-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: mysql
     port: 3306
