🌐 feat: Update phpmyadmin-deployment.yaml | MYSQL_IP

--- a/srcs/phpmyadmin/phpmyadmin-deployment.yaml
+++ b/srcs/phpmyadmin/phpmyadmin-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         imagePullPolicy: Never
         env:
         - name: MYSQL_IP
-          value: "172.17.0.6"
+          value: mysql-service.default.svc.cluster.local
         ports:
         - containerPort: 5000
 ---
