🌐 feat: Add secret.yaml for Mysql

--- a/srcs/mysql/mysql-deployment.yaml
+++ b/srcs/mysql/mysql-deployment.yaml
@@ -33,11 +33,20 @@ spec:
         imagePullPolicy: Never
         env:
         - name: WP_DB_NAME
-          value: "wordpress"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: wp_db_name
         - name: WP_USER
-          value: "wp_user"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: wp_user
         - name: PASSWORD
-          value: "password"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: wp_password
         ports:
         - containerPort: 3306
         volumeMounts:
