🌐 feat: Update secret.yaml for Wordpress

--- a/srcs/secret.yaml
+++ b/srcs/secret.yaml
@@ -4,13 +4,13 @@ metadata:
   name: kubernetes-secret
 type: Opaque
 data:
-  # ssh_user: c3NoX3VzZXIK
-  # ssh_password: cGFzc3dvcmQK
+  ssh_user: c3NoX3VzZXI=
+  ssh_password: cGFzc3dvcmQ=
   wp_db_name: d29yZHByZXNz
   wp_user: d3BfdXNlcg==
   wp_password: cGFzc3dvcmQ=
-  # influxdb_db_name: aW5mbHV4ZGIK
-  # influxdb_user: aW5mbHV4ZGJfdXNlcgo=
-  # influxdb_password: cGFzc3dvcmQK
-  # ftps_user: ZnRwc191c2VyCg==
-  # ftps_password: cGFzc3dvcmQK
+  influxdb_db_name: aW5mbHV4ZGI=
+  influxdb_user: aW5mbHV4ZGJfdXNlcg==
+  influxdb_password: cGFzc3dvcmQ=
+  ftps_user: ZnRwc191c2Vy
+  ftps_password: cGFzc3dvcmQ=
