--- a/srcs/influxdb/influxdb-deployment.yaml
+++ b/srcs/influxdb/influxdb-deployment.yaml
@@ -33,11 +33,20 @@ spec:
         imagePullPolicy: Never
         env:
         - name: INFLUXDB_NAME
-          value: "influxdb"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: influxdb_db_name
         - name: INFLUXDB_USER
-          value: "influxdb_user"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: influxdb_user
         - name: PASSWORD
-          value: "password"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: influxdb_password
         ports:
         - containerPort: 8086
         volumeMounts:
