🌐 feat: Update secret.yaml for FTPS

--- a/srcs/ftps/ftps_deployment.yaml
+++ b/srcs/ftps/ftps_deployment.yaml
@@ -19,9 +19,15 @@ spec:
         imagePullPolicy: Never
         env:
         - name: USER
-          value: "user"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: ftps_password
         - name: PASSWORD
-          value: "password"
+          valueFrom:
+            secretKeyRef:
+              name: kubernetes-secret
+              key: ftps_password
         ports:
         - containerPort: 20
         - containerPort: 21
