:arrow_up: feat : Update files config FTPS

--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -5,7 +5,6 @@ write_enable=YES
 local_umask=022
 dirmessage_enable=YES
 xferlog_enable=YES
-connect_from_port_20=YES
 vsftpd_log_file=/proc/1/fd/1
 ftpd_banner=Welcome Alpine ftp server https://hub.docker.com/r/delfer/alpine-ftp-server/
 listen=YES
@@ -30,3 +29,8 @@ require_ssl_reuse=YES
 ssl_ciphers=HIGH
 rsa_cert_file=/etc/ssl/certs/vsftpd.crt
 rsa_private_key_file=/etc/ssl/private/vsftpd.key
+
+# Enable active mode
+port_enable=YES
+connect_from_port_20=YES
+ftp_data_port=20
