:arrow_up: style : Modif nginx.conf

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -9,26 +9,21 @@ events {
 
 http {
 		server {
-			listen 80 default_server;
-			listen [::]:80 default_server;
-
-			root	/www;
-			index	index.html index.htm;
-
+			listen 					80;
 			location / {
-				return 301 https://$host$request_uri;
+				return 301 			https://$host;
 			}
 		}
 
 		server {
-			listen 443 ssl;
-			listen [::]:443 ssl;
-			server_name _;
+			listen 					443 ssl;
+			listen 					[::]:443 ssl;
+			server_name				_;
 
-			ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-			ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+			root 					/www;
+			index 					index.html index.htm;
 
-			root /www;
-			index index.html index.htm;
+			ssl_certificate 		/etc/ssl/certs/nginx-selfsigned.crt;
+			ssl_certificate_key 	/etc/ssl/private/nginx-selfsigned.key;
 			}
 }
