🌐 feat: Grafana add database and the dashboard automatically

--- a/srcs/telegraf/telegraf.conf
+++ b/srcs/telegraf/telegraf.conf
@@ -47,6 +47,14 @@
   username = "influxdb_user"
   password = "password"
 
+[[inputs.cpu]]
+  ## Whether to report per-cpu stats or not
+  percpu = true
+  ## Whether to report total system cpu stats or not
+  totalcpu = true
+  ## Comment this line if you want the raw CPU time metrics
+  fielddrop = ["time_*"]
+
 [[inputs.docker]]
   endpoint = "unix:///var/run/docker.sock"
   gather_services = false
