--- a/srcs/mysql/mysql-deployment.yaml
+++ b/srcs/mysql/mysql-deployment.yaml
@@ -50,7 +50,7 @@ spec:
         ports:
         - containerPort: 3306
         volumeMounts:
-          - mountPath: /srcs/mysql-persistent-volume
+          - mountPath: /var/lib/mysql
             name: mysql-persistent-volume
       volumes:
        - name: mysql-persistent-volume
