--- a/srcs/nginx/nginx-deployment.yaml
+++ b/srcs/nginx/nginx-deployment.yaml
@@ -28,6 +28,12 @@ spec:
               secretKeyRef:
                 name: kubernetes-secret
                 key: ssh_password
+        livenessProbe:
+          exec:
+            command:
+            - service nginx status
+          initialDelaySeconds: 5
+          periodSeconds: 3
         ports:
         - containerPort: 22
         - containerPort: 80
