🌐 feat : Add LivenessProbe for FTPS 🌱

--- a/srcs/ftps/ftps-deployment.yaml
+++ b/srcs/ftps/ftps-deployment.yaml
@@ -28,6 +28,11 @@ spec:
             secretKeyRef:
               name: kubernetes-secret
               key: ftps_password
+        livenessProbe:
+          exec:
+            command:
+            - sh
+            - /srcs/livenessprod.sh
         ports:
         - containerPort: 20
         - containerPort: 21
