--- a/srcs/phpmyadmin/phpmyadmin-deployment.yaml
+++ b/srcs/phpmyadmin/phpmyadmin-deployment.yaml
@@ -20,6 +20,11 @@ spec:
         env:
         - name: MYSQL_IP
           value: mysql-service.default.svc.cluster.local
+        livenessProbe:
+          exec:
+            command:
+            - sh
+            - /srcs/livenessprobe.sh
         ports:
         - containerPort: 5000
 ---
