📦 feat : File storage | Updating livenessprobe | Updating setup scripts

--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -12,10 +12,10 @@ RUN wget https://dl.grafana.com/oss/release/grafana-7.1.5.linux-amd64.tar.gz \
 # Required by grafana-server dependency to run grafana binary
 RUN mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
 
-ADD setup.sh /srcs/setup.sh
-ADD datasource.yaml grafana/conf/provisioning/datasources/
-ADD dashboard.yaml grafana/conf/provisioning/dashboards/
-ADD dashboard_overview.json /var/lib/grafana/dashboards/
+ADD /srcs/setup.sh					/srcs/setup.sh
+ADD /srcs/datasource.yaml 			grafana/conf/provisioning/datasources/
+ADD /srcs/dashboard.yaml 			grafana/conf/provisioning/dashboards/
+ADD /srcs/dashboard_overview.json 	/var/lib/grafana/dashboards/
 
 EXPOSE 3000
 
