--- a/srcs/nginx/nginx-deployment.yaml
+++ b/srcs/nginx/nginx-deployment.yaml
@@ -31,18 +31,9 @@ spec:
         livenessProbe:
           exec:
             command:
-            - service
-            - nginx 
-            - status
-          initialDelaySeconds: 5
-          periodSeconds: 3
-        livenessProbe:
-          exec:
-            command:
-            - service
-            - sshd 
-            - status
-          initialDelaySeconds: 5
+            - /bin/ash
+            - /srcs/livenessprobe.sh
+          initialDelaySeconds: 15
           periodSeconds: 3
         ports:
         - containerPort: 22
