--- a/srcs/telegraf/Dockerfile
+++ b/srcs/telegraf/Dockerfile
@@ -8,12 +8,14 @@ RUN wget https://dl.influxdata.com/telegraf/releases/telegraf-1.15.2_linux_amd64
 && rm telegraf-1.15.2_linux_amd64.tar.gz
 RUN cp -rf telegraf/etc/* /etc/
 RUN cp -rf telegraf/usr/* /usr/
+RUN apk add openrc
 
 # Required by telegraf
 RUN mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
 
-ADD setup.sh /srcs/setup.sh
-ADD telegraf.conf /etc/telegraf/telegraf.conf
+ADD /srcs/setup.sh 			/srcs/setup.sh
+ADD /srcs/livenessprobe.sh	/srcs/livenessprobe.sh
+ADD /srcs/telegraf.conf 	/etc/telegraf/telegraf.conf
 
 EXPOSE 8125
 
