--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -5,19 +5,20 @@ MAINTAINER Jereligi <jereligi@student.42.fr>
 RUN apk update && apk add openrc \
 && apk add nginx openssl openssh
 
-ADD nginx.conf /etc/nginx/nginx.conf
-ADD setup.sh setup.sh
-RUN chmod +x setup.sh
+ADD /srcs/nginx.conf		/etc/nginx/nginx.conf
+ADD /srcs/setup.sh 			/srcs/setup.sh
+RUN chmod +x 				/srcs/setup.sh
 RUN mkdir www
-ADD index.html /www/index.html
+ADD /srcs/index.html		/www/index.html
+ADD /srcs//livenessprobe.sh	/srcs/livenessprobe.sh
 
 # CONFIG OPENSSL
 RUN openssl req -x509 -nodes -subj '/C=FR/ST=PARIS/L=PARIS/O=jereligi/CN=localhost' \
 		 -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key \
 		 -out /etc/ssl/certs/nginx-selfsigned.crt
 # CONGIF SSH
-ADD sshd_config /etc/ssh/
+ADD /srcs/sshd_config 		/etc/ssh/
 
 EXPOSE 22 80 443
 
-CMD ["sh", "./setup.sh"]
+CMD ["sh", "/srcs/setup.sh"]
